<resources>
    <string name="app_name">Unlone</string>
    <string name="lounge">Lounge</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="action_register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_post_fragment">Create post fragment</string>
    <string name="btn_submit">post</string>
    <string name="todo">…</string>
    <string name="blank" />
    <string name="date">date</string>
    <string name="journal">journal</string>
    <string name="title">Title</string>
    <string name="add_image">Add Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_post_greet">It is not easy to open up, so we are glad to having you here…</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Comment…</string>
    <string name="action_login">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="write_story">Write Story</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_term_confirmation">I agree to the term and condition</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="school_email">School email</string>
    <string name="become_part_of_the_community">Become part of the community</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="label">Label:</string>
    <string name="back">Back</string>
    <string name="post">Post</string>
    <string name="almost">Almost!</string>
    <string name="category">Category</string>
    <string name="preference">Preference</string>
    <string name="disable_comment">Disable comment</string>
    <string name="disable_saving">Disable saving</string>
    <string name="preview">Preview</string>
    <string name="tab_following">Following</string>
    <string name="all">All</string>
    <string name="tab_categories">Categories</string>
    <string name="write_a_post">Write something</string>
    <string name="thank_you">Thank you!</string>
    <string name="report_text">Thank you for report, we will let you know the result as soon as possible</string>
    <string name="confirm">confirm</string>
    <string name="delete_alert">Alert</string>
    <string name="report_alert_context">Are you sure deleting this post?</string>
    <string name="action_delete">delete</string>
    <string name="hate_speech">Hate Speech</string>
    <string name="span_or_irrelevant">Span or Irrelevant</string>
    <string name="sexual_or_inappropriate">Sexual or Inappropriate</string>
    <string name="just_dont_like">I just don’t like it</string>
    <string name="more">More</string>
    <string name="my_stories">My Stories</string>
    <string name="journey">Journey</string>
    <string name="saved">Saved</string>
    <string name="setting">Setting</string>
    <string name="contact">Contact \nUs</string>
    <string name="logout">Logout</string>
    <string name="what_type_of_issue">What type of issue?</string>
    <string name="details">Details</string>
    <string name="we_will_reply_you_as_soon_as_possible">Tell us more</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="others_won_t_see_it">Others won\'t see it</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="why_report">Why do you want to report?</string>
    <string name="logout_alert">Are you sure to logout?</string>
    <string name="pick_categories_greeting">What kind of topics you would like to see?\n\nPlease pick at least 3 topics~</string>
    <string name="start">Start</string>
    <string name="typing_hint">How can I call you?</string>
    <string name="look_for_connection">Build connection</string>
    <string name="express_my_feelings">Share/ Unleash my feelings</string>
    <string name="help_people_in_need">Help people in need</string>
    <string name="wandering_look_for_sth_different">Looking for interesting topics</string>
    <string name="final_step">Final Step</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_to_unlone">Welcome to Unlone</string>
    <string name="to_ensure_to_community_safety_nwe_d_like_to_confirm_your_identity">To ensure to community safety,\nwe’d like to confirm your identity</string>
    <string name="please_click_the_button_below_nto_send_verification_email">Please click the button below\nto send verification email</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="school_email_description">"No matter you’re a student or graduated, you can still register via school email.  "</string>
    <string name="validate_school_email">Validating your school email…</string>
    <string name="continue_text">continue</string>
    <string name="validation_failed">validation failed</string>
    <string name="validation_failed_supporting_text">Your school email is not validated. If you have any question, please email us via unlonely2021@gmail.com</string>
    <string name="email_has_been_sent">Email has been sent</string>
    <string name="please_check_your_email">Please check your email</string>
    <string name="you_may_also_need_to_check_n_the_junk_mail">You may also need to check\n the junk mail</string>
    <string name="topic_label">Topic:</string>
    <string name="topic">Topic</string>
    <string name="hello">Hello!</string>
    <string name="greetingText">Here, you can always find someone connected to you, who share the feelings you have had. \n\nWe have prepared 3 questions and 4 pages of guiding principles. \n\nDon\'t worry, it won\'t take too long!</string>
    <string name="for_now_what_is_your_overall_goal_downloading_this_app">For now, what is your overall goal using this app?</string>
    <string name="pick_interests_greeting">What do you usually like to do?\n\nWe can match you with others who have similar interests!</string>
    <string name="guiding_principle">Guiding principle</string>
    <string name="instruction">Throughout this journey, we want to help you accomplish your pursuing goal.\n\nSo, here are some tips and reminding for you…</string>
    <string name="principle_1_title">Be mindful</string>
    <string name="principle_1_text">Focus on your feelings and thoughts. It could help express yourself better.</string>
    <string name="principle_2_title">Be kind</string>
    <string name="principle_2_text">What you express could have impact on other members. So please be careful.</string>
    <string name="principle_3_text">Don’t share your personal information to others.</string>
    <string name="principle_3_title">Be safe</string>
    <string name="empathy">Empathy</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="type_email">Please type your email</string>
    <string name="type_password">Please type your password</string>
    <string name="longer_password">Password must have at least 6 characters</string>
    <string name="confirm_password_incorrect">Password is not the same as Confirm Password</string>
    <string name="auth_fail">Authentication failed!</string>
    <string name="login_require_all">All fields are required</string>
    <string name="topic_more">More…</string>
    <string name="email_verification_alert">If you go back to last page, you need to sign up again.</string>
    <string name="proceed">Proceed</string>
    <string name="reminding">Reminding</string>
    <string name="email_verification_redirect">You will be redirected to Login Page</string>
    <string name="leaving_app">Are you surfing to leave?</string>
    <string name="cate_post_layout" translatable="false">%1$s  |  </string>
    <string name="guiding_introduce">You can always find people you feel connect.\n\nBecause it is a peer support platform.</string>
    <string name="guiding_question">We love to see you supporting others!\n\nBut please respond others with kindness. \n\nYou might ask, what exactly should I do?</string>
    <string name="guiding_spoil_alert">Spoil alert~</string>
    <string name="guid_quick_ans">My quick answers is, treat others the way you would like others treat you back.</string>
    <string name="guiding_encourage">You might think it is harder than just saying. Don’t worry, we want to help you achieve that!</string>
    <string name="language">Language</string>
    <string name="theme" translatable="false">Theme</string>
    <string name="zh">繁體中文</string>
    <string name="eng">English</string>
    <string name="ok">OK</string>
    <string name="setLang">Set language</string>
    <string name="light_theme">Day mode</string>
    <string name="dark_theme">Night Mode</string>
    <string name="system_default_theme">System Default</string>
    <string name="setDarkTheme">Set Dark Theme</string>

</resources>