<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    tools:context=".ui.access.onBoarding.GuidingPrinciple2Fragment">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/guiding_principle"
        android:textColor="@color/colorText"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/instructionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTv"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:text="@string/guiding_spoil_alert"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/empathy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructionTv"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:text="@string/empathy"
        android:textColor="@color/colorText"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/arouse_empathy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/empathy"
        android:layout_marginStart="16dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:text="@string/guid_quick_ans"
        android:textColor="@color/colorText"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/encourageTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arouse_empathy_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:text="@string/guiding_encourage"
        android:textColor="@color/colorText"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="7/7" />


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:cornerRadius="15dp"
            app:strokeColor="@color/colorText"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finishBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="0dp"
            android:text="@string/let_s_go"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonText"
            app:cornerRadius="15dp" />

    </LinearLayout>

</RelativeLayout>