<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.access.EmailVerificationFragment2">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/email_has_been_sent"
        android:textColor="@color/colorText"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/please_check_your_email"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:gravity="center"
        android:text="@string/you_may_also_need_to_check_n_the_junk_mail"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:textStyle="normal"/>

</LinearLayout>