<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.profile.SettingFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:titleCentered="true"
                app:titleTextAppearance="@style/Toolbar.TextAppearance"
                app:titleTextColor="@color/colorToolbarText" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/langTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="@string/language"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/themeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="@string/theme"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/logoutTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/colorWarn"
            android:textSize="15sp" />


    </LinearLayout>
</layout>