<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    tools:context=".ui.access.onBoarding.GuidingPrinciple1Fragment">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:text="@string/guiding_introduce"
        android:textColor="@color/colorText"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="4/7" />


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:cornerRadius="15dp"
            app:strokeColor="@color/colorText"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="0dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonText"
            app:cornerRadius="15dp" />

    </LinearLayout>

</RelativeLayout>