<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.access.onBoarding.ChooseInterestFragment">

    <TextView
        android:id="@+id/questionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/pick_interests_greeting"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionTv"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:foregroundGravity="center"
        app:chipSpacingHorizontal="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:text="@string/back"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:strokeColor="@color/colorText"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            app:cornerRadius="15dp" />

    </LinearLayout>

</RelativeLayout>